# KruskalsMST

./: CMakeLists.txt  Readme.txt  main.cpp
include/: grapheditor.hpp  graphs.hpp  graphs.tpl
